--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="src/index.js" />
+    <script src="src/script.js" type="text/javascript"></script>
     <title>Coluzzi Andrea</title>
   </head>
 
