--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 
@@ -132,7 +132,7 @@
                           </div>
                           <div class=" col-lg-12 sub-section">
                             To know more about me,<br>
-                            <a href="./resume.pdf" target="_blank" class="btn btn-warning">View Resume</a>
+                            <a href="./resources/resume.pdf" target="_blank" class="btn btn-warning">View Resume</a>
                           </div>
                       </div>
         
@@ -243,6 +243,6 @@ $('#contact-form').on('submit', function (e) {
     }
 })
 });</script>
-    <script src="script.js" type="text/JavaScript"></script>
+    <script src="src/script.js" type="text/JavaScript"></script>
   </body>
 </html>
