--- a/index.html
+++ b/index.html
@@ -243,6 +243,6 @@ $('#contact-form').on('submit', function (e) {
     }
 })
 });</script>
-    <script src="src/script.js" type="text/JavaScript"></script>
+    <script src="src/index.js" type="text/JavaScript"></script>
   </body>
 </html>
