--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                           <a class="nav-link" href="#four">Contact</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" target="_blank" href="">Blog</a>
+                      <a class="nav-link" target="_blank" href="https://coluzziandrea.github.io/">Blog</a>
                 </li>
               
               
@@ -64,7 +64,7 @@
                 <!-- ____________________________Project 1_______________________________________________ -->
              <div class="row">
                 <div class="col-md-4 portfolio-img-container">
-                  <img class="portfolio-img" src="./images/dietisy.png" />
+                  <img class="portfolio-img" src="images/dietisy.png" />
                   <div class="middle">
                     <h3>Dietisy</h3>
                     <button class="btn btn-primary" data-toggle="modal" data-target="#modal1">Know more</button> 
@@ -81,7 +81,7 @@
                         </div>
                         <div class="modal-body">
                             <span>Android Application built for people who want to track their diet progresses.</span>
-                          <img src="./images/dietisy.png" /> 
+                          <img src="images/dietisy.png" /> 
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
