--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     
-
+{% comment %} 
     <script>
       typer(document.querySelector('#banner-text'),70)
             .line('<h1>Welcome to my digital home!</h1>')
@@ -242,7 +242,7 @@ $('#contact-form').on('submit', function (e) {
         return false;
     }
 })
-});</script>
+});</script> {% endcomment %}
     <script src="src/index.js" type="text/JavaScript"></script>
   </body>
 </html>
