modificato link blog

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                           <a class="nav-link" href="#four">Contact</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" target="_blank" href="https://andreacoluzzi.wordpress.com/">Blog</a>
+                      <a class="nav-link" target="_blank" href="https://coluzziandreadev.wordpress.com/">Blog</a>
                 </li>
               
               
