--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <body data-spy="scroll" data-target="#navbar-menu" data-offset="50">
 
       <nav  id="navbar-menu" class="navbar fixed-top navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="#">Coluzzi Andrea</a>
+          <a class="navbar-brand" href="#">
+           <img src="images/logo.png" width="30" height="30" alt="">&nbsp;Coluzzi Andrea</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
