--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
       <div class="bio animate__animated animate__shakeX">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
-          dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-          inventore tempore minus nemo, iste ullam illo laboriosam maiores
-          repudiandae quos!
+          I am a Software Engineer who is passionate about techonology and
+          problem solving. I am experienced in many software languages, methods
+          and techniques.
         </p>
       </div>
     </section>
@@ -62,18 +61,21 @@
     <section class="more-about">
       <h2>More About Me</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+        👩‍💻 I'm a Software Engineer skilled in Back-End Web Applications, but I
+        am improving my Front-End Development, too.
+      </p>
+      <p>🔥 I Try to always Keep Up With the Latest Technology Trends.</p>
+      <p>
+        🔍 I always try to find the best solution for my tasks and the best way
+        to implement it. I care deeply about building modules that suit the
+        requirements and are re-usable in the future.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-        nostrum dolor minus, libero delectus praesentium perferendis
+        🌈 I Love the Open Source Community and I'm contributing to some
+        projects.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-        consequuntur labore? Ea totam voluptas amet!
+        🤝 I like to share work experiences with my colleagues and do team work.
       </p>
     </section>
 
@@ -182,24 +184,13 @@
       <h2>Get In Touch With Me</h2>
       <div class="contact-form-container">
         <div class="contact-form">
-          <form action="https://formspree.io/f/xyylngw" method="POST">
-            <div class="form-control">
-              <label for="name">Name</label>
-              <input
-                type="text"
-                id="name"
-                name="sender-name"
-                placeholder="Enter Your Name"
-                class="input-field"
-                required
-              />
-            </div>
+          <form action="https://formspree.io/f/xjvjzjyv" method="POST">
             <div class="form-control">
               <label for="email">Email</label>
               <input
                 type="email"
                 id="email"
-                name="sender-email"
+                name="_replyto"
                 placeholder="Enter Your Email"
                 class="input-field"
                 required
@@ -229,28 +220,21 @@
     </section>
     <!-- Social accounts - Fixed to the right -->
     <div class="socials">
-      <a href="#" target="_blank"
+      <a href="https://twitter.com/acidevil94" target="_blank"
         ><img
           src="assets/icons/icons8-twitter-circled.gif"
           alt="Twitter"
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
-        ><img
-          src="assets/icons/icons8-instagram.gif"
-          alt="Instagram"
-          loading="lazy"
-          class="socicon"
-      /></a>
-      <a href="#" target="_blank"
+      <a href="https://www.linkedin.com/in/andrea-coluzzi/" target="_blank"
         ><img
           src="assets/icons/icons8-linkedin-circled.gif"
           alt="Linkedin"
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
+      <a href="https://github.com/coluzziandrea" target="_blank"
         ><img src="assets/icons/icons8-github.gif" alt="Github" class="socicon"
       /></a>
     </div>
