--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <!--CSS Styles -->
     <link rel="stylesheet" href="css/style.css" />
 
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+ 
+
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
@@ -32,6 +37,7 @@
   <body>
     <!-- Navbar -->
     <nav>
+      <img class="navbar-logo" src="images/logo.png"></img>
       <h1>Coluzzi Andrea</h1>
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
@@ -184,7 +190,7 @@
           <a
             href="./resources/resume.pdf"
             target="_blank"
-            class="btn btn-warning"
+            class="btn-resume"
             >View Resume</a
           >
         </div>
