--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <!--CSS Styles -->
     <link rel="stylesheet" href="css/style.css" />
 
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
- 
-
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
@@ -36,8 +31,8 @@
 
   <body>
     <!-- Navbar -->
+
     <nav>
-      <img class="navbar-logo" src="images/logo.png"></img>
       <h1>Coluzzi Andrea</h1>
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
@@ -57,7 +52,6 @@
         <ion-icon class="bars" name="menu-outline"></ion-icon>
       </button>
     </nav>
-
     <!-- Hero Section -->
 
     <section class="hero" id="about">
@@ -187,10 +181,7 @@
         </div>
         <div class="col-lg-12 sub-section">
           To know more about me,<br />
-          <a
-            href="./resources/resume.pdf"
-            target="_blank"
-            class="btn-resume"
+          <a href="./resources/resume.pdf" target="_blank" class="btn-resume"
             >View Resume</a
           >
         </div>
@@ -220,7 +211,7 @@
           <a
             href="https://play.google.com/store/apps/details?id=com.andreacoluzzi.dietisy"
             target="_blank"
-            class="project-link"
+            class="btn-resume"
             >Check it Out</a
           >
         </div>
@@ -242,7 +233,7 @@
           <a
             href="https://github.com/coluzziandrea/Band_Together"
             target="_blank"
-            class="project-link"
+            class="btn-resume"
             >Check it Out</a
           >
         </div>
