--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <span lang="en-US"
           >I'm a Software Engineer skilled in Back-End Web Applications, but I
-          am improving my Front-End Development, too.</span
+          am improving my Front-End Development too.</span
         ><span lang="it-IT"
           >Sono un Ingegnere Software esperto in applicazioni Web back-end, ma
           sto anche migliorando il mio sviluppo front-end.</span
@@ -122,7 +122,7 @@
       <p>
         🔥
         <span lang="en-US"
-          >I Try to always Keep Up With the Latest Technology Trends.</span
+          >I Always Try to Keep Up With the Latest Technology Trends.</span
         ><span lang="it-IT">
           Cerco di stare sempre al passo con le ultime tendenze
           tecnologiche.</span
@@ -132,8 +132,8 @@
         🔍
 
         <span lang="en-US"
-          >I always try to find the best solution for my tasks and the best way
-          to implement it. I care deeply about building modules that suit the
+          >I always try to find the best solutions for my tasks and the best way
+          to implement them. I deeply care about building modules that suit the
           requirements and are re-usable in the future.</span
         ><span lang="it-IT">
           Cerco sempre di trovare la soluzione migliore per i miei compiti e il
@@ -156,7 +156,7 @@
         🤝
 
         <span lang="en-US">
-          I like to share work experiences with my colleagues and do team
+          I like sharing work experiences with my colleagues and I love team
           work.</span
         ><span lang="it-IT">
           Mi piace condividere esperienze lavorative con i miei colleghi e fare
