--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <li>
           <a
             target="_blank"
-            href="https://coluzziandreadev.wordpress.com/"
+            href="https://hashnode.com/@coluzziandrea"
             class="nav-link"
             >Blog</a
           >
@@ -409,10 +409,10 @@
       <a href="https://github.com/coluzziandrea" target="_blank"
         ><img src="images/icons/icons8-github.gif" alt="Github" class="socicon"
       /></a>
-      <a href="https://coluzziandreadev.wordpress.com/" target="_blank"
+      <a href="https://hashnode.com/@coluzziandrea" target="_blank"
         ><img
-          src="images/icons/icons8-wordpress.gif"
-          alt="Wordpress"
+          src="images/icons/icons8-commenti.gif"
+          alt="Blog"
           class="socicon"
       /></a>
     </div>
