--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="images/icons/icon_inverted.png"
+      href="images/icons/favicon.ico"
     />
 
     <!-- Animate CSS CDN -->
@@ -418,11 +418,11 @@
     </div>
     <!-- Scroll to top -->
     <i class="scroll-up" id="scroll-up"
-      ><img src="images/icons/up.png" class="socicon up-arrow" alt="scroll-up"
+      ><img src="images/icons/icons8-up-48.png" class="socicon up-arrow" alt="scroll-up"
     /></i>
     <!-- Footer section -->
     <footer>
-      <p class="copy">&copy; Copyright 2021 <i>Coluzzi Andrea</i></p>
+      <p class="copy">&copy; Copyright 2022 <i>Coluzzi Andrea</i></p>
     </footer>
     <!-- Website scripts -->
     <script src="src/script.js"></script>
