--- a/index.html
+++ b/index.html
@@ -415,12 +415,18 @@
           alt="Blog"
           class="socicon"
       /></a>
-      <a href="https://api.whatsapp.com/send/?phone=393402494287&text=Hi%20Andrea%2C%0AI%20wanted%20to%20talk%20to%20you%20about%20a%20project%20I%20had%20in%20mind%20to%20develop.%20I%20think%20you%20are%20the%20right%20person.&app_absent=0" target="_blank"
+      <a href="https://api.whatsapp.com/send/?phone=393402494287&text=Hi%20Andrea%2C%0AI%20wanted%20to%20talk%20to%20you%20about%20a%20project%20I%20had%20in%20mind%20to%20develop.%20I%20think%20you%20are%20the%20right%20person.&app_absent=0" target="_blank" lang="en-US" 
       ><img
         src="images/icons/icons8-whatsapp.gif"
         alt="WhatsApp"
         class="socicon"
     /></a>
+    <a href="https://api.whatsapp.com/send/?phone=393402494287&text=Ciao%20Andrea%2C%0AVorrei%20parlarti%20di%20un%20progetto%20che%20avevo%20in%20mente%20di%20sviluppare.%20Penso%20che%20tu%20saresti%20la%20persona%20giusta.&app_absent=0" target="_blank" lang="it-IT" 
+    ><img
+      src="images/icons/icons8-whatsapp.gif"
+      alt="WhatsApp"
+      class="socicon"
+  /></a>
     </div>
     <!-- Scroll to top -->
     <i class="scroll-up" id="scroll-up"
