--- a/coluzzi-andrea/public/index.html
+++ b/coluzzi-andrea/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Coluzzi Andrea | Software Engineer</title>
+  <title>Andrea Coluzzi</title>
 </head>
 
 <body>
